# notebooks

./: .gitignore  README.md  pyproject.toml
attention/: gpt.py  main.py  test_transformer.py  train.py  transformer.py
attention-is-all-you-need/: transformer.py
camera/: computer_vision.md  play_camera.py  rectification.py
longllm-gen/: content_gen.py  moonshot-gen.py  prompt_template.py
src/3dgs/: 3DGS_Lab_Exercise.ipynb  3dgs.md  play_3dgs.py
src/camera/: camera_model.md  camera_model.py  play_camera.py
src/longllm-gen/: README.md
src/tfrecord/: README.md  dataset.py  reader.py  record.proto  tf_record.proto  tf_record.py
tfrecord/: README.md  TODO.txt  example.py  record.py  record_pb2.py  tf_record_pb2.py
