[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = "learning notebooks"
authors = ["s7ev3n"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
torch = { url = "https://download.pytorch.org/whl/cu117/torch-2.0.1%2Bcu117-cp310-cp310-linux_x86_64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu117/torchvision-0.15.2%2Bcu117-cp310-cp310-linux_x86_64.whl" }
timm = "^0.9.12"
protobuf = "^4.25.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
